// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users can be created/updated/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createUser": Object {
      "email": "rwayne@mymail1.com",
      "id": Any<String>,
      "name": "Robin Wayne",
      "roles": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deleteUser": Any<String>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "user": Object {
      "email": "bwayne@mymail3.com",
      "id": Any<String>,
      "name": "Bruce Wayne",
      "roles": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can be read in list 1`] = `
Object {
  "data": Object {
    "users": Object {
      "nodes": Array [
        Object {
          "email": "bwayne@mymail2.com",
          "id": Any<String>,
          "name": "Bruce Wayne",
          "roles": Array [],
        },
        Object {
          "email": "rwayne@mymail1.com",
          "id": Any<String>,
          "name": "Robin Wayne",
          "roles": Array [],
        },
        Object {
          "email": "bwayne@mymail0.com",
          "id": Any<String>,
          "name": "Bruce Wayne",
          "roles": Array [],
        },
        Object {
          "email": "dev@wepublish.ch",
          "id": Any<String>,
          "name": "Dev User",
          "roles": Array [
            Object {
              "description": "Administrator Role",
              "id": "admin",
              "name": "Admin",
              "permissions": Array [
                Object {
                  "deprecated": false,
                  "description": "Allows to get navigation",
                  "id": "CAN_CREATE_NAVIGATION",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get navigation",
                  "id": "CAN_GET_NAVIGATION",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get all navigations",
                  "id": "CAN_GET_NAVIGATIONS",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to delete navigations",
                  "id": "CAN_DELETE_NAVIGATION",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to create authors",
                  "id": "CAN_CREATE_AUTHOR",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get author",
                  "id": "CAN_GET_AUTHOR",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to all authors",
                  "id": "CAN_GET_AUTHORS",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to delete authors",
                  "id": "CAN_DELETE_AUTHORS",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to create images",
                  "id": "CAN_CREATE_IMAGE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get image",
                  "id": "CAN_GET_IMAGE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get all images",
                  "id": "CAN_GET_IMAGES",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to delete images",
                  "id": "CAN_DELETE_IMAGE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to create articles",
                  "id": "CAN_CREATE_ARTICLE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get article",
                  "id": "CAN_GET_ARTICLE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get all articles",
                  "id": "CAN_GET_ARTICLES",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to delete articles",
                  "id": "CAN_DELETE_ARTICLE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to publish articles",
                  "id": "CAN_PUBLISH_ARTICLE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get peer article",
                  "id": "CAN_GET_PEER_ARTICLE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get all peer articles",
                  "id": "CAN_GET_PEER_ARTICLES",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to create Pages",
                  "id": "CAN_CREATE_PAGE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get Page",
                  "id": "CAN_GET_PAGE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get all Pages",
                  "id": "CAN_GET_PAGES",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to delete Pages",
                  "id": "CAN_DELETE_PAGE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to publish Pages",
                  "id": "CAN_PUBLISH_PAGE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to update peer profile",
                  "id": "CAN_UPDATE_PEER_PROFILE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get peer profile",
                  "id": "CAN_GET_PEER_PROFILE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to create peers",
                  "id": "CAN_CREATE_PEER",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get peer",
                  "id": "CAN_GET_PEER",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get all peers",
                  "id": "CAN_GET_PEERS",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to delete peers",
                  "id": "CAN_DELETE_PEER",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to create tokens",
                  "id": "CAN_CREATE_TOKEN",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to delete tokens",
                  "id": "CAN_DELETE_TOKEN",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get all tokens",
                  "id": "CAN_GET_TOKENS",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to delete tokens",
                  "id": "CAN_DELETE_TOKEN",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to create an user",
                  "id": "CAN_CREATE_USER",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to reset the password of an user",
                  "id": "CAN_RESET_USER_PASSWORD",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get an user",
                  "id": "CAN_GET_USER",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get all users",
                  "id": "CAN_GET_USERS",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to delete users",
                  "id": "CAN_DELETE_USER",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to create an user role",
                  "id": "CAN_CREATE_USER_ROLE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get an user role",
                  "id": "CAN_GET_USER_ROLE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get all user roles",
                  "id": "CAN_GET_USER_ROLES",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to delete user role",
                  "id": "CAN_DELETE_USER_ROLE",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get a permission",
                  "id": "CAN_GET_PERMISSION",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to get all permissions",
                  "id": "CAN_GET_PERMISSIONS",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to create comments",
                  "id": "CAN_CREATE_COMMENT",
                },
                Object {
                  "deprecated": false,
                  "description": "Allows to login editor",
                  "id": "CAN_LOGIN_EDITOR",
                },
              ],
              "systemRole": true,
            },
          ],
        },
      ],
      "pageInfo": Object {
        "endCursor": Any<String>,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": Any<String>,
      },
      "totalCount": Any<Number>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updateUser": Object {
      "email": "batman@email.com",
      "id": Any<String>,
      "name": "Dark Knight",
      "roles": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can reset user password 1`] = `
Object {
  "data": Object {
    "createSession": Object {
      "token": Any<String>,
      "user": Object {
        "email": "bwayne@mymail5.com",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can reset user password 2`] = `
Object {
  "data": Object {
    "resetUserPassword": Object {
      "email": "bwayne@mymail5.com",
      "id": Any<String>,
      "name": "Bruce Wayne",
      "roles": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: can reset user password 3`] = `
Object {
  "data": Object {
    "createSession": Object {
      "token": Any<String>,
      "user": Object {
        "email": "bwayne@mymail5.com",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
